--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "@electron-forge/plugin-webpack": "7.4.0",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@types/axios": "^0.14.4",
     "@types/node": "^20.14.11",
+    "@types/pino": "^7.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
@@ -68,16 +71,24 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "node-loader": "^2.0.0",
     "react-refresh": "^0.14.2",
-    "sass": "^1.77.8",
-    "sass-loader": "^14.2.1",
+    "sass": "^1.84.0",
+    "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "ts-loader": "9.5.1",
     "typescript": "^5.5.3",
     "webpack": "^5.93.0"
   },
   "dependencies": {
+    "antd": "^5.23.4",
+    "axios": "^1.7.9",
+    "chokidar": "^4.0.3",
+    "dayjs": "^1.11.13",
     "electron-squirrel-startup": "^1.0.1",
+    "pino": "^9.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "urunner-lib": "^1.0.0",
+    "zustand": "^5.0.3"
   }
 }
